--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.5",
     "core-js": "^3.8.3",
     "router": "^2.2.0",
-    "vue": "^3.2.13"
+    "store": "^2.0.12",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
