--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "router": "^2.2.0",
     "store": "^2.0.12",
     "vue": "^3.2.13",
