--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "core-js": "^3.8.3",
+    "feather-icons": "^4.29.2",
     "jwt-decode": "^4.0.0",
     "router": "^2.2.0",
     "store": "^2.0.12",
